--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,28 @@
       content="Web site created using create-react-app"
     />
     <title>Rental</title>
+    <style>
+      /* Style the scroll bar */
+      ::-webkit-scrollbar {
+        width: 15px;
+      }
+  
+      /* Track */
+      ::-webkit-scrollbar-track {
+        background: rgb(35 48 52);
+      }
+      
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: #091f2c;
+        border-radius: 5px;
+      }
+  
+      /* Handle on hover */
+      ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+      }
+    </style>
   </head>
   <body  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
